# VCG

./: MyTactics.vo  README.md  Semantics.vo  VCG.cabal  compile-with-delta-debug.sh  compile-with-delta-system.sh  compile-with-delta.sh  run-debug-nopath.sh  run-debug.sh  run-system-nopath.sh  run-system.sh
data/: debug.py  debug2.py  ecall-delta-1.0-1.drpm  ecall_europe-1.0-1.i686.rpm  ecall_russia-1.0-1.i686.rpm  script.sh  symbols_europe.txt  symbols_russia.txt
data/conf_1/: ecall-delta-1.0-1.drpm  ecall_europe-1.0-1.i686.rpm
data/conf_2/: ecall-delta-static-dynamic-1.0-1.drpm  ecall_europe-1.0-1.i686.rpm
dist_/: setup-config
src/: Bifunctor.hs  Code.hs  Extraction.hs  Functions.hs  Generator.hs  Generator3.hs  Generator4.hs  Generator5.hs  Main.hs  NMParser.hs  Operations.hs  Parser_nm.hs  nmParser.hs
