name: VCG
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable VCG
    build-depends: MissingH -any, QuickCheck -any, aeson -any,
                   base -any, containers -any, diff3 -any, mtl -any, parsec -any,
                   path -any, process -any, pyfi -any
    main-is: Main.hs
    buildable: True
    extensions: FlexibleContexts
    hs-source-dirs: src
    other-modules: Operations Generator
 
test-suite test-VCG
    build-depends: MissingH -any, QuickCheck -any, aeson -any,
                   base -any, containers -any, diff3 -any, mtl -any, parsec -any,
                   path -any, process -any, pyfi -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src